--- a/Desktop/api/.gitignore
+++ b/Desktop/api/.gitignore
@@ -1,2 +1,6 @@
 # Para todos os arquivos e sub-pastas localizados na pasta node_modules/
 node_modules/
+perfil.page.html
+perfil.page.scss
+perfil.page.ts
+api.rar
